# pkek-cpp-2022

lab-1/: CMakeLists.txt  input.txt  main.cpp  output.txt
lab-2/: CMakeLists.txt  Point.cpp  Point.h  Vector.cpp  Vector.h  main.cpp
lab-3/: Button.cpp  Button.h  CMakeLists.txt  MenuNode.cpp  MenuNode.h  MenuWindow.cpp  MenuWindow.h  Widget.cpp  Widget.h  input.txt  main.cpp
